--- a/style/helpers.scss
+++ b/style/helpers.scss
@@ -4,14 +4,21 @@
 @function exponent($base, $exponent) {
   // reset value
   $value: $base;
+
   // positive intergers get multiplied
-  @if $exponent > 1 {
+  @if $exponent >1 {
     @for $i from 2 through $exponent {
-      $value: $value * $base; } }
+      $value: $value * $base;
+    }
+  }
+
   // negitive intergers get divided. A number divided by itself is 1
   @if $exponent < 1 {
     @for $i from 0 through -$exponent {
-      $value: $value / $base; } }
+      $value: $value / $base;
+    }
+  }
+
   // return the last value written
   @return $value;
 }
@@ -57,9 +64,11 @@
   @-webkit-keyframes $animation-name {
     @content;
   }
+
   @-moz-keyframes $animation-name {
     @content;
   }
+
   @keyframes $animation-name {
     @content;
   }
