--- a/style/fa/css/font-awesome.css
+++ b/style/fa/css/font-awesome.css
@@ -5,9 +5,14 @@
 /* FONT PATH
  * -------------------------- */
 @font-face {
-  font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot?v=4.1.0');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.1.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff?v=4.1.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.1.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular') format('svg');
+  font-family: "FontAwesome";
+  src: url("../fonts/fontawesome-webfont.eot?v=4.1.0");
+  src: url("../fonts/fontawesome-webfont.eot?#iefix&v=4.1.0")
+      format("embedded-opentype"),
+    url("../fonts/fontawesome-webfont.woff?v=4.1.0") format("woff"),
+    url("../fonts/fontawesome-webfont.ttf?v=4.1.0") format("truetype"),
+    url("../fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular")
+      format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -61,9 +66,9 @@
   left: -1.85714286em;
 }
 .fa-border {
-  padding: .2em .25em .15em;
+  padding: 0.2em 0.25em 0.15em;
   border: solid 0.08em #eeeeee;
-  border-radius: .1em;
+  border-radius: 0.1em;
 }
 .pull-right {
   float: right;
@@ -72,10 +77,10 @@
   float: left;
 }
 .fa.pull-left {
-  margin-right: .3em;
+  margin-right: 0.3em;
 }
 .fa.pull-right {
-  margin-left: .3em;
+  margin-left: 0.3em;
 }
 .fa-spin {
   -webkit-animation: spin 2s infinite linear;
@@ -85,36 +90,36 @@
 }
 @-moz-keyframes spin {
   0% {
-	-moz-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
   }
   100% {
-	-moz-transform: rotate(359deg);
+    -moz-transform: rotate(359deg);
   }
 }
 @-webkit-keyframes spin {
   0% {
-	-webkit-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
   }
   100% {
-	-webkit-transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
   }
 }
 @-o-keyframes spin {
   0% {
-	-o-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
   }
   100% {
-	-o-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
   }
 }
 @keyframes spin {
   0% {
-	-webkit-transform: rotate(0deg);
-	transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-	-webkit-transform: rotate(359deg);
-	transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
 .fa-rotate-90 {
