--- a/maker/templates/footer.html
+++ b/maker/templates/footer.html
@@ -1,7 +1,9 @@
 <footer>
-<p>{{HEADLINE}}</p>
-<p>last updated: <span style="white-space: nowrap;">{{DATETIME_UTC}} UTC</span></p>
-<p>powered by <a href="https://github.com/HarshitBhatt043/Jenkins-Project-Web-Arcade/tree/main" target="_blank">Jenkins Arcade</a> {{VERSION}}</p>
+    <p>{{HEADLINE}}</p>
+    <p>last updated: <span style="white-space: nowrap;">{{DATETIME_UTC}} UTC</span></p>
+    <p>powered by <a href="https://github.com/HarshitBhatt043/Jenkins-Project-Web-Arcade/tree/main"
+            target="_blank">Jenkins Arcade</a> {{VERSION}}</p>
 </footer>
 </body>
+
 </html>
