--- a/maker/templates/footer.html
+++ b/maker/templates/footer.html
@@ -1,8 +1,15 @@
 <footer>
-    <p>{{HEADLINE}}</p>
-    <p>last updated: <span style="white-space: nowrap;">{{DATETIME_UTC}} UTC</span></p>
-    <p>powered by <a href="https://github.com/HarshitBhatt043/Jenkins-Project-Web-Arcade/tree/main"
-            target="_blank">Jenkins Arcade</a> {{VERSION}}</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <p>Last Updated: <span style="white-space: nowrap;">{{DATETIME_UTC}} UTC</span></p>
+            </div>
+            <div class="col-md-4">
+                <p>Powered by <a href="https://github.com/HarshitBhatt043/Jenkins-Project-Web-Arcade/tree/main"
+                        target="_blank">Jenkins Automation</a></p>
+            </div>
+        </div>
+    </div>
 </footer>
 </body>
 
