Edited Clickable like

--- a/maker/templates/footer.html
+++ b/maker/templates/footer.html
@@ -6,7 +6,7 @@
             </div>
             <div class="col-md-4">
                 <p>Powered by <a href="https://github.com/HarshitBhatt043/Jenkins-Project-Web-Arcade/tree/main"
-                        target="_blank" rel="noopener">">Jenkins Automation</a></p>
+                        target="_blank" rel="noopener">Jenkins Automation</a></p>
             </div>
         </div>
     </div>
