--- a/maker/templates/footer.html
+++ b/maker/templates/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <p>Last Updated: <span style="white-space: nowrap;">{{DATETIME_UTC}} UTC</span></p>
+                <p>Last Updated: <span style="white-space: nowrap;">{{DATETIME_IST}}</span></p>
             </div>
             <div class="col-md-4">
                 <p>Powered by <a href="https://github.com/HarshitBhatt043/Jenkins-Project-Web-Arcade/tree/main"
