--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file. */
 
-html, body {
+html,
+body {
   padding: 0;
   margin: 0;
   width: 100%;
@@ -15,16 +16,14 @@ html, body {
   display: inline-block;
 }
 
-
 .hidden {
   display: none;
 }
 
-
 /* Offline page */
 .offline {
   transition: filter 1.5s cubic-bezier(0.65, 0.05, 0.36, 1),
-              background-color 1.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+    background-color 1.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
 .offline body {
@@ -70,7 +69,7 @@ html, body {
 }
 
 .offline .controller {
-  background: rgba(247, 247, 247, .1);
+  background: rgba(247, 247, 247, 0.1);
   height: 100vh;
   left: 0;
   position: absolute;
@@ -82,7 +81,6 @@ html, body {
 #offline-resources {
   display: none;
 }
-
 
 .arcade-mode,
 .arcade-mode .runner-container,
@@ -120,11 +118,9 @@ html, body {
   z-index: 2;
 }
 
-
 @media (prefers-color-scheme: dark) {
-	
   body {
-	background-color: #000;
+    background-color: #000;
   }
 
   .offline .runner-canvas {
@@ -140,11 +136,14 @@ html, body {
     background-color: #fff;
   }
 
-  h1{filter: invert(1);}
+  h1 {
+    filter: invert(1);
+  }
 }
 
 @media (max-width: 420px) {
-  .suggested-left > #control-buttons, .suggested-right > #control-buttons {
+  .suggested-left > #control-buttons,
+  .suggested-right > #control-buttons {
     float: none;
   }
   .snackbar {
@@ -177,7 +176,7 @@ html, body {
   }
 }
 
-@media (min-width: 420px) and (max-width: 736px) and (min-height: 240px) and (max-height: 420px) and (orientation:landscape) {
+@media (min-width: 420px) and (max-width: 736px) and (min-height: 240px) and (max-height: 420px) and (orientation: landscape) {
   .interstitial-wrapper {
     margin-bottom: 100px;
   }
