--- a/styles/interstitial_common.css
+++ b/styles/interstitial_common.css
@@ -9,14 +9,14 @@ button {
   color: var(--primary-button-text-color);
   cursor: pointer;
   float: right;
-  font-size: .875em;
+  font-size: 0.875em;
   margin: 0;
   padding: 8px 16px;
   transition: box-shadow 150ms cubic-bezier(0.4, 0, 0.2, 1);
   user-select: none;
 }
 
-[dir='rtl'] button {
+[dir="rtl"] button {
   float: left;
 }
 
@@ -70,8 +70,8 @@ button:active {
 
 .secondary-button:active {
   border-color: white;
-  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .3),
-      0 2px 6px 2px rgba(60, 64, 67, .15);
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+    0 2px 6px 2px rgba(60, 64, 67, 0.15);
 }
 
 .secondary-button:hover {
@@ -82,7 +82,7 @@ button:active {
 
 .error-code {
   color: var(--error-code-color);
-  font-size: .8em;
+  font-size: 0.8em;
   margin-top: 12px;
   text-transform: uppercase;
 }
@@ -110,11 +110,11 @@ h2 {
   width: 72px;
 }
 
-input[type=checkbox] {
+input[type="checkbox"] {
   opacity: 0;
 }
 
-input[type=checkbox]:focus ~ .checkbox::after {
+input[type="checkbox"]:focus ~ .checkbox::after {
   outline: -webkit-focus-ring-color auto 5px;
 }
 
@@ -132,7 +132,7 @@ input[type=checkbox]:focus ~ .checkbox::after {
 }
 
 #extended-reporting-opt-in {
-  font-size: .875em;
+  font-size: 0.875em;
   margin-top: 32px;
 }
 
@@ -171,14 +171,14 @@ input[type=checkbox]:focus ~ .checkbox::after {
 
 .nav-wrapper::after {
   clear: both;
-  content: '';
+  content: "";
   display: table;
   width: 100%;
 }
 
 .small-link {
   color: var(--small-link-color);
-  font-size: .875em;
+  font-size: 0.875em;
 }
 
 .checkboxes {
@@ -186,7 +186,7 @@ input[type=checkbox]:focus ~ .checkbox::after {
 }
 
 .checkbox {
-  --padding: .9em;
+  --padding: 0.9em;
   background: transparent;
   display: block;
   height: 1em;
@@ -194,14 +194,14 @@ input[type=checkbox]:focus ~ .checkbox::after {
   padding-inline-start: var(--padding);
   position: absolute;
   right: 0;
-  top: -.5em;
+  top: -0.5em;
   width: 1em;
 }
 
 .checkbox::after {
   border: 1px solid white;
   border-radius: 2px;
-  content: '';
+  content: "";
   height: 1em;
   left: var(--padding);
   position: absolute;
@@ -214,17 +214,17 @@ input[type=checkbox]:focus ~ .checkbox::after {
   border: 2px solid white;
   border-inline-end-width: 0;
   border-top-width: 0;
-  content: '';
-  height: .2em;
-  left: calc(.3em + var(--padding));
+  content: "";
+  height: 0.2em;
+  left: calc(0.3em + var(--padding));
   opacity: 0;
   position: absolute;
-  top: calc(.3em  + var(--padding));
+  top: calc(0.3em + var(--padding));
   transform: rotate(-45deg);
-  width: .5em;
+  width: 0.5em;
 }
 
-input[type=checkbox]:checked ~ .checkbox::before {
+input[type="checkbox"]:checked ~ .checkbox::before {
   opacity: 1;
 }
 
@@ -256,10 +256,10 @@ input[type=checkbox]:checked ~ .checkbox::before {
 
 @media (max-width: 420px) {
   button,
-  [dir='rtl'] button,
+  [dir="rtl"] button,
   .small-link {
     float: none;
-    font-size: .825em;
+    font-size: 0.825em;
     font-weight: 500;
     margin: 0;
     width: 100%;
@@ -318,10 +318,8 @@ input[type=checkbox]:checked ~ .checkbox::before {
 }
 
 /* Fixed nav. */
-@media (min-width: 240px) and (max-width: 420px) and
-       (min-height: 401px),
-       (min-width: 421px) and (min-height: 240px) and
-       (max-height: 560px) {
+@media (min-width: 240px) and (max-width: 420px) and (min-height: 401px),
+  (min-width: 421px) and (min-height: 240px) and (max-height: 560px) {
   body .nav-wrapper {
     background: var(--background-color);
     bottom: 0;
@@ -355,18 +353,17 @@ input[type=checkbox]:checked ~ .checkbox::before {
   }
 }
 
-@media (max-width: 420px) and (orientation: portrait),
-       (max-height: 560px) {
+@media (max-width: 420px) and (orientation: portrait), (max-height: 560px) {
   body {
     margin: 0 auto;
   }
 
   button,
-  [dir='rtl'] button,
+  [dir="rtl"] button,
   button.small-link,
   .nav-wrapper .secondary-button {
-    font-family: Roboto-Regular,Helvetica;
-    font-size: .933em;
+    font-family: Roboto-Regular, Helvetica;
+    font-size: 0.933em;
     margin: 6px 0;
     transform: translatez(0);
   }
@@ -411,7 +408,7 @@ input[type=checkbox]:checked ~ .checkbox::before {
   }
 
   .interstitial-wrapper p {
-    font-size: .95em;
+    font-size: 0.95em;
     line-height: 1.61em;
     margin-top: 8px;
   }
@@ -438,7 +435,7 @@ input[type=checkbox]:checked ~ .checkbox::before {
   }
 }
 
-@media (min-height: 400px) and (orientation:portrait) {
+@media (min-height: 400px) and (orientation: portrait) {
   .interstitial-wrapper {
     margin-bottom: 145px;
   }
@@ -450,14 +447,13 @@ input[type=checkbox]:checked ~ .checkbox::before {
   }
 }
 
-@media (max-height: 560px) and (min-height: 240px) and (orientation:landscape) {
+@media (max-height: 560px) and (min-height: 240px) and (orientation: landscape) {
   .extended-reporting-has-checkbox #details {
     padding-bottom: 80px;
   }
 }
 
-@media (min-height: 500px) and (max-height: 650px) and (max-width: 414px) and
-       (orientation: portrait) {
+@media (min-height: 500px) and (max-height: 650px) and (max-width: 414px) and (orientation: portrait) {
   .interstitial-wrapper {
     margin-top: 7vh;
   }
@@ -471,8 +467,8 @@ input[type=checkbox]:checked ~ .checkbox::before {
 
 /* Small mobile screens. No fixed nav. */
 @media (max-height: 400px) and (orientation: portrait),
-       (max-height: 239px) and (orientation: landscape),
-       (max-width: 419px) and (max-height: 399px) {
+  (max-height: 239px) and (orientation: landscape),
+  (max-width: 419px) and (max-height: 399px) {
   .interstitial-wrapper {
     display: flex;
     flex-direction: column;
