--- a/styles/neterror.css
+++ b/styles/neterror.css
@@ -1,5 +1,5 @@
 * {
-  font-family: system-ui, 'Segoe UI', Tahoma, sans-serif;
+  font-family: system-ui, "Segoe UI", Tahoma, sans-serif;
 }
 
 /* Copyright 2013 The Chromium Authors. All rights reserved.
@@ -36,8 +36,9 @@ a {
 
 .icon-offline {
   content: -webkit-image-set(
-      url(../images/default_100_percent/offline/100-error-offline.png) 1x,
-      url(../images/default_200_percent/offline/200-error-offline.png) 2x);
+    url(../images/default_100_percent/offline/100-error-offline.png) 1x,
+    url(../images/default_200_percent/offline/200-error-offline.png) 2x
+  );
   position: relative;
 }
 
@@ -46,14 +47,14 @@ a {
 }
 
 /* Offline page */
-html[dir='rtl'] .runner-container,
-html[dir='rtl'].offline .icon-offline {
+html[dir="rtl"] .runner-container,
+html[dir="rtl"].offline .icon-offline {
   transform: scaleX(-1);
 }
 
 .offline {
   transition: filter 1.5s cubic-bezier(0.65, 0.05, 0.36, 1),
-              background-color 1.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+    background-color 1.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
 .offline body {
@@ -176,7 +177,7 @@ html[dir='rtl'].offline .icon-offline {
   display: none;
 }
 
-.slow-speed-option [type=checkbox] {
+.slow-speed-option [type="checkbox"] {
   opacity: 0;
   pointer-events: none;
   position: absolute;
@@ -189,11 +190,11 @@ html[dir='rtl'].offline .icon-offline {
   position: relative;
 }
 
-.slow-speed-option [type=checkbox]:disabled ~ .slow-speed-toggle {
+.slow-speed-option [type="checkbox"]:disabled ~ .slow-speed-toggle {
   cursor: default;
 }
 
-.slow-speed-option-label [type=checkbox] {
+.slow-speed-option-label [type="checkbox"] {
   opacity: 0;
   pointer-events: none;
   position: absolute;
@@ -201,14 +202,14 @@ html[dir='rtl'].offline .icon-offline {
 
 .slow-speed-option .slow-speed-toggle::before,
 .slow-speed-option .slow-speed-toggle::after {
-  content: '';
+  content: "";
   display: block;
   margin: 0 3px;
   transition: all 100ms cubic-bezier(0.4, 0, 1, 1);
 }
 
 .slow-speed-option .slow-speed-toggle::before {
-  background: rgb(189,193,198);
+  background: rgb(189, 193, 198);
   border-radius: 0.65em;
   height: 0.9em;
   width: 2em;
@@ -225,28 +226,30 @@ html[dir='rtl'].offline .icon-offline {
   width: 1.1em;
 }
 
-.slow-speed-option [type=checkbox]:focus + .slow-speed-toggle {
+.slow-speed-option [type="checkbox"]:focus + .slow-speed-toggle {
   box-shadow: 0 0 8px rgb(94, 158, 214);
   outline: 1px solid rgb(93, 157, 213);
 }
 
-.slow-speed-option [type=checkbox]:checked + .slow-speed-toggle::before {
+.slow-speed-option [type="checkbox"]:checked + .slow-speed-toggle::before {
   background: var(--google-blue-600);
   opacity: 0.5;
 }
 
-.slow-speed-option [type=checkbox]:checked + .slow-speed-toggle::after {
+.slow-speed-option [type="checkbox"]:checked + .slow-speed-toggle::after {
   background: var(--google-blue-600);
   transform: translate(calc(2em - 90%), -50%);
 }
 
-.slow-speed-option [type=checkbox]:checked:disabled +
-  .slow-speed-toggle::before {
-  background: rgb(189,193,198);
+.slow-speed-option
+  [type="checkbox"]:checked:disabled
+  + .slow-speed-toggle::before {
+  background: rgb(189, 193, 198);
 }
 
-.slow-speed-option [type=checkbox]:checked:disabled +
-  .slow-speed-toggle::after {
+.slow-speed-option
+  [type="checkbox"]:checked:disabled
+  + .slow-speed-toggle::after {
   background: var(--google-gray-50);
 }
 
@@ -287,9 +290,7 @@ html[dir='rtl'].offline .icon-offline {
   }
 }
 
-@media (min-width: 420px) and (max-width: 736px) and
-       (min-height: 240px) and (max-height: 420px) and
-       (orientation:landscape) {
+@media (min-width: 420px) and (max-width: 736px) and (min-height: 240px) and (max-height: 420px) and (orientation: landscape) {
   .interstitial-wrapper {
     margin-bottom: 100px;
   }
@@ -383,9 +384,9 @@ html[dir='rtl'].offline .icon-offline {
   .offline .runner-canvas {
     filter: invert(1);
     transition: filter 1.5s cubic-bezier(0.65, 0.05, 0.36, 1),
-              background-color 1.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+      background-color 1.5s cubic-bezier(0.65, 0.05, 0.36, 1);
   }
-  
+
   .offline.inverted .runner-canvas {
     filter: invert(0);
   }
@@ -417,13 +418,14 @@ html[dir='rtl'].offline .icon-offline {
   }
 
   .slow-speed-option .slow-speed-toggle::before,
-  .slow-speed-option [type=checkbox]:checked:disabled +
-    .slow-speed-toggle::before {
-     background: rgb(189,193,198);
+  .slow-speed-option
+    [type="checkbox"]:checked:disabled
+    + .slow-speed-toggle::before {
+    background: rgb(189, 193, 198);
   }
 
-  .slow-speed-option [type=checkbox]:checked + .slow-speed-toggle::after,
-  .slow-speed-option [type=checkbox]:checked + .slow-speed-toggle::before {
+  .slow-speed-option [type="checkbox"]:checked + .slow-speed-toggle::after,
+  .slow-speed-option [type="checkbox"]:checked + .slow-speed-toggle::before {
     background: var(--google-blue-300);
   }
 }
