Added Project architecture

--- a/maker/templates/footer.html
+++ b/maker/templates/footer.html
@@ -5,8 +5,8 @@
                 <p>Last Updated: <span style="white-space: nowrap;">{{DATETIME_IST}}</span></p>
             </div>
             <div class="col-md-4">
-                <p>Powered by <a href="https://github.com/HarshitBhatt043/Jenkins-Project-Web-Arcade/tree/main"
-                        target="_blank" rel="noopener">Jenkins Automation</a></p>
+                <p>Powered by <a href="./maker/templates/architecture.html"
+                        target="_blank" rel="noopener">DEVOPS</a></p>
             </div>
         </div>
     </div>
