--- a/maker/templates/architecture.html
+++ b/maker/templates/architecture.html
@@ -2,7 +2,7 @@
   ]><meta http-equiv="X-UA-Compatible" content="IE=5,IE=9"
 /><![endif]-->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Architecture</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
