--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-	html, body {
+html,
+body {
   height: 100%;
   width: 100%;
 }
@@ -10,12 +11,12 @@ body {
   font-size: 0;
   background-color: #303030;
   color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 .grid {
   background-color: #424242;
   padding: 20px;
-  box-shadow: 0 6px 24px rgba(0,0,0,0.3);
+  box-shadow: 0 6px 24px rgba(0, 0, 0, 0.3);
   border-radius: 2px;
   width: 355px;
   height: 355px;
@@ -38,23 +39,23 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: 20px;
-  box-shadow: 0 0.5px 3px rgba(0,0,0,0.3);
-  transition: left .2s, top .2s;
+  box-shadow: 0 0.5px 3px rgba(0, 0, 0, 0.3);
+  transition: left 0.2s, top 0.2s;
 }
 .grid > span.square {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' stroke-linejoin='round' fill='none' stroke='rgba(0,0,0,0.3)' stroke-width='1'%3E%3Cpath d='M1 1H9V9H1z'/%3E%3C/svg%3E")
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' stroke-linejoin='round' fill='none' stroke='rgba(0,0,0,0.3)' stroke-width='1'%3E%3Cpath d='M1 1H9V9H1z'/%3E%3C/svg%3E");
 }
 .grid > span.circle {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' fill='none' stroke='rgba(0,0,0,0.3)' stroke-width='1'%3E%3Ccircle cx='5' cy='5' r='4'/%3E%3C/svg%3E")
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' fill='none' stroke='rgba(0,0,0,0.3)' stroke-width='1'%3E%3Ccircle cx='5' cy='5' r='4'/%3E%3C/svg%3E");
 }
 .grid > span.triangle {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' stroke-linejoin='round' fill='none' stroke='rgba(0,0,0,0.3)' stroke-width='1'%3E%3Cpath d='M5 1.5L9 8.5H1z'/%3E%3C/svg%3E")
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' stroke-linejoin='round' fill='none' stroke='rgba(0,0,0,0.3)' stroke-width='1'%3E%3Cpath d='M5 1.5L9 8.5H1z'/%3E%3C/svg%3E");
 }
 .grid > span.plus {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' stroke-linecap='round' fill='none' stroke='rgba(0,0,0,0.3)' stroke-width='1'%3E%3Cpath d='M5 1V9M1 5H9'/%3E%3C/svg%3E")
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' stroke-linecap='round' fill='none' stroke='rgba(0,0,0,0.3)' stroke-width='1'%3E%3Cpath d='M5 1V9M1 5H9'/%3E%3C/svg%3E");
 }
 .grid > span.minus {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' stroke-linecap='round' fill='none' stroke='rgba(0,0,0,0.3)' stroke-width='1'%3E%3Cpath d='M2 5H8'/%3E%3C/svg%3E")
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' stroke-linecap='round' fill='none' stroke='rgba(0,0,0,0.3)' stroke-width='1'%3E%3Cpath d='M2 5H8'/%3E%3C/svg%3E");
 }
 .grid > span.hexagon {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 10' stroke-linejoin='round' fill='none' stroke='rgba(0,0,0,0.3)' stroke-width='1'%3E%3Cpath d='M4 1H8L10.6 5L8 9H4L1.4 5z'/%3E%3C/svg%3E");
@@ -64,7 +65,7 @@ body {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' fill='rgba(0,0,0,0.3)'%3E%3Ccircle cx='5' cy='5' r='1'/%3E%3C/svg%3E");
 }
 .grid > span::after {
-  content: '';
+  content: "";
   pointer-events: none;
   width: 100%;
   height: 100%;
@@ -77,7 +78,7 @@ body {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' stroke-linejoin='round' stroke-linecap='round' fill='none' stroke='white' stroke-width='1'%3E%3Cpath d='M1 2V1H2M9 8V9H8 M9 2V1H8M2 9H1V8'/%3E%3C/svg%3E");
   transform: scale(1.2);
   opacity: 0;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 .grid > span.active::after {
   transform: scale(1);
@@ -85,17 +86,27 @@ body {
 }
 .grid > span.entering {
   padding: 0 20px;
-  animation: entering .2s .2s forwards;
+  animation: entering 0.2s 0.2s forwards;
 }
 @keyframes entering {
-  from {padding: 0 20px;}
-  to {padding: 20px;}
+  from {
+    padding: 0 20px;
+  }
+  to {
+    padding: 20px;
+  }
 }
 .grid > span.exiting {
   pointer-events: none;
-  animation: exiting .2s forwards;
+  animation: exiting 0.2s forwards;
 }
 @keyframes exiting {
-  from {padding: 20px; margin-top: 0;}
-  to {padding: 0 20px; margin-top: 40px;}
+  from {
+    padding: 20px;
+    margin-top: 0;
+  }
+  to {
+    padding: 0 20px;
+    margin-top: 40px;
+  }
 }
