Updated and added UI UX for first time user

--- a/maker/templates/header.html
+++ b/maker/templates/header.html
@@ -16,6 +16,15 @@
   <body>
     <div class="container">
       <div class="headline">{{HEADLINE}}</div>
+      <div id="popup" class="popup">
+        <div class="popup-content">
+          <h2 id="popup-title" style="color: blue"></h2>
+          <p id="popup-message" style="color: green"></p>
+          <br />
+          <button id="closePopup">Close</button>
+        </div>
+      </div>
+      <script src="./maker/templates/popup.js"></script>
     </div>
   </body>
 </html>
