--- a/maker/templates/css.css
+++ b/maker/templates/css.css
@@ -179,18 +179,21 @@ footer a:hover {
   }
 }
 
-#closePopup {
+.popup-button {
   cursor: pointer;
   background-color: transparent;
   border: none;
   font-size: 20px;
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
+  padding: 10px 20px;
+  margin: 0 10px;
+  border-radius: 10px;
   transition: transform 0.2s ease-in-out;
 }
 
-#closePopup:hover {
-  transform: translateX(-50%) scale(1.2);
+.popup-button:hover {
+  transform: scale(1.2);
+}
+
+.popup-buttons {
+  margin-top: 20px;
 }
