--- a/maker/templates/header.html
+++ b/maker/templates/header.html
@@ -20,8 +20,10 @@
         <div class="popup-content">
           <h2 id="popup-title" style="color: blue"></h2>
           <p id="popup-message" style="color: green"></p>
-          <br />
-          <button id="closePopup">Close</button>
+          <div class="popup-buttons">
+            <button id="yesButton" class="popup-button">Yes</button>
+            <button id="noButton" class="popup-button">No</button>
+          </div>
         </div>
       </div>
       <script src="./maker/templates/popup.js"></script>
