Updated the code

--- a/maker/templates/footer.html
+++ b/maker/templates/footer.html
@@ -8,6 +8,9 @@
                 <p>Powered by <a href="./maker/templates/architecture.html"
                         target="_blank" rel="noopener">DEVOPS</a></p>
             </div>
+            <div class="col-md-4">
+                <p>Monitoring <a href="https://grafana.pearl9.cloud/public-dashboards/23490b7b4ca84f19a197c7af8ba7c64b?orgId=1&refresh=1m" target="_blank" rel="noopener">Jenkins</a></p>
+            </div>
         </div>
     </div>
 </footer>
