--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 @import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);
 
-*{box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
 
 body {
-  margin: 0; padding: 0;
-  font-family: 'Gloria Hallelujah', cursive;
+  margin: 0;
+  padding: 0;
+  font-family: "Gloria Hallelujah", cursive;
 }
 
 .container {
   height: 552px;
   width: 422px;
   position: relative;
-  margin: 20px auto 0; 
+  margin: 20px auto 0;
   overflow: hidden;
 }
 
@@ -29,7 +32,7 @@ canvas {
   position: absolute;
   top: -3px;
   left: 0;
-  z-index: -1;  
+  z-index: -1;
   border-image: url(http://i.imgur.com/5BBsR.png) 100 5 round;
 }
 
@@ -40,9 +43,12 @@ canvas {
   margin: 0px 0 0 5px;
 }
 
-img {display: none}
+img {
+  display: none;
+}
 
-#mainMenu, #gameOverMenu {
+#mainMenu,
+#gameOverMenu {
   height: 100%;
   width: 100%;
   text-align: center;
@@ -56,23 +62,33 @@ img {display: none}
   visibility: hidden;
 }
 
-h2, h3, h1 {font-weight: normal}
+h2,
+h3,
 h1 {
-  font-size: 60px; 
-  color: #5a5816; 
+  font-weight: normal;
+}
+h1 {
+  font-size: 60px;
+  color: #5a5816;
   transform: rotate(-10deg);
   margin: 0px;
 }
 
-h3 {text-align: right; margin: -10px 20px 0 0; color: #5e96be}
-h3 a {color: #5a5816}
+h3 {
+  text-align: right;
+  margin: -10px 20px 0 0;
+  color: #5e96be;
+}
+h3 a {
+  color: #5a5816;
+}
 
 .button {
   width: 105px;
   height: 31px;
   background: url(http://i.imgur.com/2WEhF.png) 0 0 no-repeat;
   display: block;
-  color:  #000;
+  color: #000;
   font-size: 12px;
   line-height: 31px;
   text-decoration: none;
@@ -82,7 +98,13 @@ h3 a {color: #5a5816}
   margin-left: -53px;
 }
 
-.info {position: absolute; right: 20px; bottom: 00px; margin: 0; color: green}
+.info {
+  position: absolute;
+  right: 20px;
+  bottom: 00px;
+  margin: 0;
+  color: green;
+}
 
 .info .key {
   width: 16px;
@@ -92,5 +114,9 @@ h3 a {color: #5a5816}
   display: inline-block;
 }
 
-.info .key.left {background-position: -92px -621px;}
-.info .key.right {background-position: -92px -641px;}
+.info .key.left {
+  background-position: -92px -621px;
+}
+.info .key.right {
+  background-position: -92px -641px;
+}
