--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,28 @@
 @font-face {
   font-family: jetpackia;
-  src: url('font/Jetpackia.ttf');
+  src: url("font/Jetpackia.ttf");
 }
 
 * {
-touch-action: manipulation;
+  touch-action: manipulation;
 }
 
-html{
-  height: 100%
+html {
+  height: 100%;
 }
 
-body{
+body {
   background-color: #000000;
   margin: 0;
 }
 
-.fontLoader{
+.fontLoader {
   position: absolute;
   left: -1000px;
   visibility: hidden;
 }
 
-.bannerAds{
+.bannerAds {
   height: 100px !important;
   /*background-color: yellow;*/
   display: block;
@@ -30,37 +30,40 @@ body{
   margin: 0 auto;
 }
 
-#phaser-canvas{
+#phaser-canvas {
   margin: 0 auto;
 
-  position:fixed;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  padding:0;
-  margin:0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0;
+  margin: 0;
   /* if you want the content to scroll normally: */
   overflow: auto;
 }
 
-body,#content{
+body,
+#content {
   height: 100%;
   max-height: 100vh !important;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
   height: 100vh;
   width: 100vw;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   /* required to prevent rogue scrollbars */
   overflow: hidden;
 }
 
-#divAds, #tempads{
+#divAds,
+#tempads {
   display: none;
   /*background-color: green;*/
 }
@@ -80,53 +83,54 @@ html, body {
   display: none;
   width: 100%;
   object-fit: scale-down;
-  left: 50%; 
+  left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%); 
+  transform: translate(-50%, -50%);
   position: absolute;
 }
 /*ROTATE SCREEN */
 /*================ START ADS ===================*/
-.softkey{
+.softkey {
   position: absolute;
   bottom: 0px;
   width: 100%;
 }
-.softkey>div{
+.softkey > div {
   padding: 5px;
   font-size: 17px;
   font-weight: 600;
   display: inline-block;
-  color:#000000;
+  color: #000000;
 }
-#softkey-left{
+#softkey-left {
   text-align: left;
-  float:left;
+  float: left;
 }
-#softkey-right{
+#softkey-right {
   text-align: right;
-  float:right;   
+  float: right;
 }
-.ads{
+.ads {
   position: absolute !important;
 }
-#bannerAds_container{
+#bannerAds_container {
   top: 0;
   height: 40px;
-  background-color:black;
+  background-color: black;
   display: list-item;
 }
-#ad-container{
+#ad-container {
   height: 40px;
   background-color: black !important;
 }
-.bannerAds{
+.bannerAds {
   height: 100px !important;
   display: block;
   text-align: center;
   margin: 0 auto;
 }
-#divAds, #tempads{
+#divAds,
+#tempads {
   display: none;
 }
 /*================ END ADS ===================*/
