--- a/css/ctl-multiplayer-icons.css
+++ b/css/ctl-multiplayer-icons.css
@@ -1,11 +1,13 @@
 @font-face {
-  font-family: 'ctl-multiplayer-icons';
-  src: url('../font/ctl-multiplayer-icons.eot?98779393');
-  src: url('../font/ctl-multiplayer-icons.eot?98779393#iefix') format('embedded-opentype'),
-       url('../font/ctl-multiplayer-icons.woff2?98779393') format('woff2'),
-       url('../font/ctl-multiplayer-icons.woff?98779393') format('woff'),
-       url('../font/ctl-multiplayer-icons.ttf?98779393') format('truetype'),
-       url('../font/ctl-multiplayer-icons.svg?98779393#ctl-multiplayer-icons') format('svg');
+  font-family: "ctl-multiplayer-icons";
+  src: url("../font/ctl-multiplayer-icons.eot?98779393");
+  src: url("../font/ctl-multiplayer-icons.eot?98779393#iefix")
+      format("embedded-opentype"),
+    url("../font/ctl-multiplayer-icons.woff2?98779393") format("woff2"),
+    url("../font/ctl-multiplayer-icons.woff?98779393") format("woff"),
+    url("../font/ctl-multiplayer-icons.ttf?98779393") format("truetype"),
+    url("../font/ctl-multiplayer-icons.svg?98779393#ctl-multiplayer-icons")
+      format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -19,47 +21,64 @@
   }
 }
 */
- 
- [class^="ctl-multiplayer-icons-"]:before, [class*=" ctl-multiplayer-icons-"]:before {
+
+[class^="ctl-multiplayer-icons-"]:before,
+[class*=" ctl-multiplayer-icons-"]:before {
   font-family: "ctl-multiplayer-icons";
   font-style: normal;
   font-weight: normal;
   speak: none;
- 
+
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right: .2em;
+  margin-right: 0.2em;
   text-align: center;
   /* opacity: .8; */
- 
+
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
- 
+
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
- 
+
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
-  margin-left: .2em;
- 
+  margin-left: 0.2em;
+
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
- 
+
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- 
+
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
-.ctl-multiplayer-icons-lock:before { content: '\e800'; } /* '' */
-.ctl-multiplayer-icons-lock-open:before { content: '\e801'; } /* '' */
-.ctl-multiplayer-icons-block:before { content: '\e802'; } /* '' */
-.ctl-multiplayer-icons-arrows-cw:before { content: '\e803'; } /* '' */
-.ctl-multiplayer-icons-login:before { content: '\e804'; } /* '' */
-.ctl-multiplayer-icons-spin5:before { content: '\e838'; } /* '' */
-.ctl-multiplayer-icons-help:before { content: '\f128'; } /* '' */
-.ctl-multiplayer-icons-attention-alt:before { content: '\f12a'; } /* '' */
+
+.ctl-multiplayer-icons-lock:before {
+  content: "\e800";
+} /* '' */
+.ctl-multiplayer-icons-lock-open:before {
+  content: "\e801";
+} /* '' */
+.ctl-multiplayer-icons-block:before {
+  content: "\e802";
+} /* '' */
+.ctl-multiplayer-icons-arrows-cw:before {
+  content: "\e803";
+} /* '' */
+.ctl-multiplayer-icons-login:before {
+  content: "\e804";
+} /* '' */
+.ctl-multiplayer-icons-spin5:before {
+  content: "\e838";
+} /* '' */
+.ctl-multiplayer-icons-help:before {
+  content: "\f128";
+} /* '' */
+.ctl-multiplayer-icons-attention-alt:before {
+  content: "\f12a";
+} /* '' */
