--- a/css/main.css
+++ b/css/main.css
@@ -1,92 +1,98 @@
-root { 
-    display: block;
+root {
+  display: block;
 }
 
-body{
-    background-color: #000000;
-    background-repeat: repeat-x;
-    background-position: top;  
+body {
+  background-color: #000000;
+  background-repeat: repeat-x;
+  background-position: top;
 }
 
-*, *:before, *:after {
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-     
-input, input:before, input:after {
-    -webkit-user-select: initial;
-    -khtml-user-select: initial;
-    -moz-user-select: initial;
-    -ms-user-select: initial;
-    user-select: initial;
+*,
+*:before,
+*:after {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-::selection { background: transparent;color:inherit; }
-::-moz-selection { background: transparent;color:inherit; }
+input,
+input:before,
+input:after {
+  -webkit-user-select: initial;
+  -khtml-user-select: initial;
+  -moz-user-select: initial;
+  -ms-user-select: initial;
+  user-select: initial;
+}
 
-#canvas{
-    
-    position: fixed;
-    
-    
+::selection {
+  background: transparent;
+  color: inherit;
+}
+::-moz-selection {
+  background: transparent;
+  color: inherit;
+}
+
+#canvas {
+  position: fixed;
 }
 
 canvas {
-    image-rendering: optimizeSpeed;
-    image-rendering:-o-crisp-edges;
-    image-rendering:-webkit-optimize-contrast;
-    -ms-interpolation-mode: nearest-neighbor;
-	-ms-touch-action: none;
+  image-rendering: optimizeSpeed;
+  image-rendering: -o-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  -ms-interpolation-mode: nearest-neighbor;
+  -ms-touch-action: none;
 }
 
-.ani_hack{
-    -webkit-perspective: 1000;
-    -webkit-backface-visibility: hidden;
-    
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    outline: none;
-    -webkit-tap-highlight-color: transparent; /* mobile webkit */
+.ani_hack {
+  -webkit-perspective: 1000;
+  -webkit-backface-visibility: hidden;
+
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  outline: none;
+  -webkit-tap-highlight-color: transparent; /* mobile webkit */
 }
 
-#div_display_id{
-    width:100%;
-    position: fixed;
-    left: 50%; 
-    bottom: 15px; 
-    -ms-transform: translate(-50%, 0%);
-    -moz-transform: translate(-50%, 0%);
-    -webkit-transform: translate(-50%, 0%);
-    -o-transform: translate(-50%, 0%);
-    transform: translate(-50%, 0%);
-    width:768px;
-    height:90px;
-    display:none;
+#div_display_id {
+  width: 100%;
+  position: fixed;
+  left: 50%;
+  bottom: 15px;
+  -ms-transform: translate(-50%, 0%);
+  -moz-transform: translate(-50%, 0%);
+  -webkit-transform: translate(-50%, 0%);
+  -o-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
+  width: 768px;
+  height: 90px;
+  display: none;
 }
 
 /***************FONTS*******************/
-.check-fonts{
-                position: fixed;
-                opacity:0;
+.check-fonts {
+  position: fixed;
+  opacity: 0;
 }
 
-.check-font-1{
-        font-family: 'comfortaabold';
+.check-font-1 {
+  font-family: "comfortaabold";
 }
-                
+
 @font-face {
-    font-family: 'comfortaabold';
-    src: url('comfortaa-bold-webfont.woff2') format('woff2'),
-         url('comfortaa-bold-webfont.woff') format('woff'),
-         url('comfortaa-bold-webfont.svg#comfortaabold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: "comfortaabold";
+  src: url("comfortaa-bold-webfont.woff2") format("woff2"),
+    url("comfortaa-bold-webfont.woff") format("woff"),
+    url("comfortaa-bold-webfont.svg#comfortaabold") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
