Added Arcade Cache Cleaner

--- a/maker/templates/header.html
+++ b/maker/templates/header.html
@@ -14,6 +14,9 @@
     </style>
   </head>
   <body>
+    <a href="./maker/templates/cache.html" class="circle-button">
+      <div class="circle-button-icon">&#x1F5D1;</div>
+    </a>
     <div class="container">
       <div class="headline">{{HEADLINE}}</div>
       <div id="popup" class="popup">
