--- a/maker/templates/css.css
+++ b/maker/templates/css.css
@@ -197,3 +197,26 @@ footer a:hover {
 .popup-buttons {
   margin-top: 20px;
 }
+.circle-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: blue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.circle-button:hover {
+  background-color: #00008b;
+}
+
+.circle-button-icon {
+  color: white;
+  font-size: 18px;
+}
