Updated popup code

--- a/maker/templates/header.html
+++ b/maker/templates/header.html
@@ -1,35 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
-    <title>{{TITLE}}</title>
-    <style>
-      {{CSS}}
-    </style>
-  </head>
-  <body>
-    <a href="./maker/templates/cache.html" class="circle-button">
-      <div class="circle-button-icon">&#x1F5D1;</div>
-    </a>
-    <div class="container">
-      <div class="headline">{{HEADLINE}}</div>
-      <div id="popup" class="popup">
-        <div class="popup-content">
-          <h2 id="popup-title" style="color: blue"></h2>
-          <p id="popup-message" style="color: green"></p>
-          <div class="popup-buttons">
-            <button id="yesButton" class="popup-button">Yes</button>
-            <button id="noButton" class="popup-button">No</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="./maker/templates/popup.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><title>{{TITLE}}</title><style>{{CSS}} </style></head><body><a href="./maker/templates/cache.html" class="circle-button" ><div class="circle-button-icon">&#x1F5D1;</div></a ><div class="container"><div class="headline">{{HEADLINE}}</div><div id="popup" class="popup"><div class="popup-content"><h2 id="popup-title" style="color: blue"></h2><div id="popup-scrollable-content" class="popup-scrollable-content" ></div><div class="popup-buttons"><button id="yesButton" class="popup-button">Yes</button ><button id="noButton" class="popup-button">No</button></div></div></div></div><script type="text/javascript">const arcadeportal="arcade_portal"; let popupClosed=!1; function startTypingAnimation(){ const e=document.getElementById("popup-title"), t=document.getElementById("popup-scrollable-content"), n="Welcome to Arcade!", o=[ "!!!", "!!!Information", "This is your first visit. Enjoy your stay.", "Desktop games are denoted by ⌨.", "Mobile games are denoted by 📱.", "!!!", "Do you want to see this announcement again?", ]; let a=0; typeText(e, n, 0, 50), setTimeout(function e(){ if (a < o.length){ const n=document.createElement("div"); t.appendChild(n); let s=o[a]; /^!!!/.test(s) && (n.classList.add("popup-content-heading"), (s=s.replace(/^!!!/, ""))); let c=0; !(function t(){ c < s.length ? ((n.textContent +=s.charAt(c)), c++, setTimeout(t, 50)) : (a++, setTimeout(e, 50));})();}}, 50 * n.length);} function typeText(e, t, n, o){ n < t.length && ((e.textContent +=t.charAt(n)), n++, setTimeout(function (){ typeText(e, t, n, o);}, o));} function closePopup(){ const e=document.getElementById("popup"); (document.querySelector(".popup-content").style.animation="popOut 0.5s ease forwards, fadeOut 0.5s ease forwards"), setTimeout(function (){ (e.style.display="none"), (popupClosed=!0);}, 500);} function checkLocalStorage(){ if ("no" !==localStorage.getItem(arcadeportal)){ const e=document.getElementById("popup"), t=document.querySelector(".popup-content"); (e.style.display="block"), (t.style.animation="popIn 0.5s ease forwards, fadeIn 0.5s ease forwards"), startTypingAnimation();}} document .getElementById("yesButton") .addEventListener("click", function (){ localStorage.setItem(arcadeportal, "yes"), closePopup();}), document .getElementById("noButton") .addEventListener("click", function (){ localStorage.setItem(arcadeportal, "no"), closePopup();}), document .getElementById("popup") .addEventListener("click", function (e){ e.target===this && closePopup();}), window.addEventListener("load", function (){ checkLocalStorage();}); </script></body></html>
