--- a/maker/templates/css.css
+++ b/maker/templates/css.css
@@ -1,222 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-:root {
-  --primary-bg: #131313;
-  --secondary-bg: #222;
-  --text-color: honeydew;
-  --link-color: darkblue;
-  --link-hover-bg: greenyellow;
-  --border-color: darkgrey;
-  --game-bg: white;
-  --game-hover-bg: greenyellow;
-  --platform-color: grey;
-  --footer-bg: rgba(0, 0, 0, 0.7);
-  --footer-text-color: slategrey;
-  --footer-link-color: lightblue;
-  --footer-link-hover-bg: darkblue;
-}
-
-body {
-  font-family: sans-serif;
-  background: linear-gradient(27deg, var(--secondary-bg) 5px, transparent 5px) 0
-      5px,
-    linear-gradient(207deg, var(--secondary-bg) 5px, transparent 5px) 10px 0px,
-    linear-gradient(27deg, var(--primary-bg) 5px, transparent 5px) 0px 10px,
-    linear-gradient(207deg, var(--primary-bg) 5px, transparent 5px) 10px 5px,
-    linear-gradient(90deg, var(--primary-bg) 10px, transparent 10px),
-    linear-gradient(
-      var(--primary-bg) 25%,
-      var(--secondary-bg) 25%,
-      var(--secondary-bg) 50%,
-      transparent 50%,
-      transparent 75%,
-      var(--primary-bg) 75%,
-      var(--primary-bg)
-    );
-  background-color: var(--primary-bg);
-  background-size: 20px 20px;
-}
-
-a,
-a:visited {
-  color: var(--link-color);
-  text-decoration: none;
-}
-
-a:hover {
-  background-color: var(--link-hover-bg);
-  color: black;
-}
-
-img {
-  border: 1px solid var(--border-color);
-}
-
-.headline {
-  background-color: rgba(0, 0, 0, 0.6);
-  color: var(--text-color);
-  font-size: 120%;
-  font-weight: bold;
-  margin: 0;
-  text-align: center;
-  padding: 10px;
-}
-
-.list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0;
-}
-
-.game {
-  background-color: var(--game-bg);
-  border: 1px solid var(--border-color);
-  margin: 5px;
-  padding: 10px;
-  text-align: center;
-  width: 118px;
-  transition: background-color 0.3s ease;
-}
-
-.game:hover {
-  background-color: var(--game-hover-bg);
-}
-
-.platform {
-  color: var(--platform-color);
-  font-size: small;
-  padding: 2px;
-  text-align: right;
-}
-
-footer {
-  background-color: var(--footer-bg);
-  color: var(--footer-text-color);
-  font-family: monospace;
-  font-size: small;
-  font-style: italic;
-  padding: 20px;
-}
-
-footer a,
-footer a:visited {
-  color: var(--footer-link-color);
-  text-decoration: none;
-}
-
-footer a:hover {
-  background-color: var(--footer-link-hover-bg);
-}
-
-.popup {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-  backdrop-filter: blur(5px);
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: opacity 0.3s ease;
-}
-
-.popup-content {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px;
-  text-align: center;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  transition: transform 0.3s ease, opacity 0.3s ease;
-}
-
-@keyframes popIn {
-  from {
-    transform: translate(-50%, -150%) scale(0.8);
-    opacity: 0;
-  }
-  to {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes popOut {
-  from {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-  }
-  to {
-    transform: translate(-50%, 150%) scale(0.8);
-    opacity: 0;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-.popup-button {
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-  font-size: 20px;
-  padding: 10px 20px;
-  margin: 0 10px;
-  border-radius: 10px;
-  transition: transform 0.2s ease-in-out;
-}
-
-.popup-button:hover {
-  transform: scale(1.2);
-}
-
-.popup-buttons {
-  margin-top: 20px;
-}
-.circle-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  background-color: blue;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.circle-button:hover {
-  background-color: #00008b;
-}
-
-.circle-button-icon {
-  color: white;
-  font-size: 18px;
-}
+*{margin:0;padding:0;box-sizing:border-box;}:root{--primary-bg:#131313;--secondary-bg:#222;--text-color:honeydew;--link-color:darkblue;--link-hover-bg:greenyellow;--border-color:darkgrey;--game-bg:white;--game-hover-bg:greenyellow;--platform-color:grey;--footer-bg:rgba(0,0,0,.7);--footer-text-color:slategrey;--footer-link-color:lightblue;--footer-link-hover-bg:darkblue;}body{font-family:sans-serif;background:linear-gradient(27deg,var(--secondary-bg) 5px,transparent 5px) 0 5px,linear-gradient(207deg,var(--secondary-bg) 5px,transparent 5px) 10px 0,linear-gradient(27deg,var(--primary-bg) 5px,transparent 5px) 0 10px,linear-gradient(207deg,var(--primary-bg) 5px,transparent 5px) 10px 5px,linear-gradient(90deg,var(--primary-bg) 10px,transparent 10px),linear-gradient(var(--primary-bg) 25%,var(--secondary-bg) 25%,var(--secondary-bg) 50%,transparent 50%,transparent 75%,var(--primary-bg) 75%,var(--primary-bg));background-color:var(--primary-bg);background-size:20px 20px;}a,a:visited{color:var(--link-color);text-decoration:none;}a:hover{background-color:var(--link-hover-bg);color:black;}img{border:1px solid var(--border-color);}.headline{background-color:rgba(0,0,0,.6);color:var(--text-color);font-size:120%;font-weight:bold;margin:0;text-align:center;padding:10px;}.list{display:flex;flex-wrap:wrap;justify-content:center;margin:0;}.game{background-color:var(--game-bg);border:1px solid var(--border-color);margin:5px;padding:10px;text-align:center;width:118px;transition:background-color .3s ease;}.game:hover{background-color:var(--game-hover-bg);}.platform{color:var(--platform-color);font-size:small;padding:2px;text-align:right;}footer{background-color:var(--footer-bg);color:var(--footer-text-color);font-family:monospace;font-size:small;font-style:italic;padding:20px;}footer a,footer a:visited{color:var(--footer-link-color);text-decoration:none;}footer a:hover{background-color:var(--footer-link-hover-bg);}.popup{display:none;position:fixed;top:0;left:0;width:100%;height:100%;z-index:999;backdrop-filter:blur(5px);background-color:rgba(0,0,0,.5);transition:opacity .3s ease;}.popup-content{display:flex;flex-direction:column;justify-content:center;align-items:center;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background-color:rgba(255,255,255,.8);padding:20px;text-align:center;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,.5);transition:transform .3s ease,opacity .3s ease;max-width:90%;max-height:90%;}@keyframes popIn{from{transform:translate(-50%,-150%) scale(.8);opacity:0}to{transform:translate(-50%,-50%) scale(1);opacity:1}}@keyframes fadeIn{from{opacity:0}to{opacity:1}}@keyframes popOut{from{transform:translate(-50%,-50%) scale(1);opacity:1}to{transform:translate(-50%,150%) scale(.8);opacity:0}}@keyframes fadeOut{from{opacity:1}to{opacity:0}}.popup-button{cursor:pointer;background-color:transparent;border:none;font-size:20px;padding:10px 20px;margin:0 10px;border-radius:10px;transition:transform .2s ease-in-out;color:#575af3;}.popup-button:hover{color:#007bff;transform:scale(1.2);}.popup-buttons{display:flex;justify-content:space-around;margin-top:20px;}.popup-content-heading{font-weight:bold;color:#4bb711;border-bottom:2px solid #cf4f04;padding-bottom:5px;margin-bottom:10px;}.popup-scrollable-content{max-height:60vh;overflow-y:auto;padding-right:15px;}.popup-scrollable-content::-webkit-scrollbar{width:2px;}.popup-scrollable-content::-webkit-scrollbar-track{background:#f1f1f1;}.popup-scrollable-content::-webkit-scrollbar-thumb{background:#888;}.popup-scrollable-content::-webkit-scrollbar-thumb:hover{background:#555;}.circle-button{position:absolute;top:10px;right:10px;width:35px;height:35px;border-radius:50%;background-color:blue;display:flex;align-items:center;justify-content:center;cursor:pointer;transition:background-color .3s ease;}.circle-button:hover{background-color:#00008b;}.circle-button-icon{color:white;font-size:18px;}
