Compressed code and added PWA support

--- a/app.css
+++ b/app.css
@@ -1,290 +1,1 @@
-body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background: #000;
-  font-family: Helvetica, Arial, sans-serif;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-}
-
-#error {
-  position: absolute;
-  width: 100%;
-  height: 50px;
-  top: 50%;
-  margin-top: -25px;
-  text-align: center;
-  color: #fff;
-  font-size: 16px;
-}
-
-#loading-bar {
-  position: absolute;
-  width: 200px;
-  height: 5px;
-  left: 50%;
-  margin-left: -100px;
-  top: 50%;
-  margin-top: -5px;
-  border: 1px solid #fff;
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-.loading-bar-visible {
-  -moz-animation: fade 0.3s;
-  -webkit-animation: fade 0.3s;
-  animation: fade 0.3s;
-  opacity: 1;
-}
-
-.loading-bar-hidden {
-  -moz-animation: fade-out 0.1s !important;
-  -webkit-animation: fade-out 0.1s !important;
-  animation: fade-out 0.1s !important;
-  opacity: 0;
-}
-
-#loading-fill {
-  background: #fff;
-  height: 100%;
-  width: 0%;
-}
-
-@-moz-keyframes fade {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes fade {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@-moz-keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-  }
-}
-
-@-webkit-keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-  }
-}
-
-@keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-  }
-}
-
-#credits {
-  position: absolute;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  right: 0;
-  bottom: 0;
-  color: #fff;
-  font-size: 12px;
-  text-align: right;
-  cursor: default;
-  -moz-animation: fade 1s;
-  -webkit-animation: fade 1s;
-  animation: fade 1s;
-}
-
-#credits div {
-  opacity: 0.5;
-  margin-top: 6px;
-}
-
-#credits a:link {
-  color: #fff;
-}
-
-#credits a:visited {
-  color: #fff;
-}
-
-.credits-hidden {
-  opacity: 0;
-}
-
-#quality-container {
-  position: absolute;
-  right: 20px;
-  top: 20px;
-  font-size: 12px;
-  height: 25px;
-  line-height: 25px;
-  -webkit-animation: fade 1s;
-  animation: fade 1s;
-}
-
-#quality-label {
-  float: left;
-  color: #fff;
-  margin-right: 15px;
-  cursor: default;
-}
-
-.quality {
-  float: left;
-  text-align: center;
-  width: 80px;
-  height: 25px;
-  line-height: 25px;
-  border-left: 1px solid #fff;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-}
-
-.quality-selected {
-  background: #fff;
-  color: #000;
-  cursor: default;
-}
-
-.quality-unselected {
-  background: 0 0;
-  color: #fff;
-  cursor: pointer;
-}
-
-.quality-unselected:hover {
-  background: rgba(255, 255, 255, 0.1);
-}
-
-#quality-medium {
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
-  padding-left: 4px;
-}
-
-#quality-high {
-  border-right: 1px solid #fff;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  padding-right: 4px;
-}
-
-.popup {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-  backdrop-filter: blur(5px);
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: opacity 0.3s ease;
-}
-
-.popup-content {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px;
-  text-align: center;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  transition: transform 0.3s ease, opacity 0.3s ease;
-}
-
-@keyframes popIn {
-  from {
-    transform: translate(-50%, -150%) scale(0.8);
-    opacity: 0;
-  }
-  to {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes popOut {
-  from {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
-  }
-  to {
-    transform: translate(-50%, 150%) scale(0.8);
-    opacity: 0;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-.popup-button {
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-  font-size: 20px;
-  padding: 10px 20px;
-  margin: 0 10px;
-  border-radius: 10px;
-  transition: transform 0.2s ease-in-out;
-}
-
-.popup-button:hover {
-  transform: scale(1.2);
-}
-
-.popup-buttons {
-  margin-top: 20px;
-}
+body{margin:0;padding:0;overflow:hidden;background:#000;font-family:Helvetica,Arial,sans-serif;user-select:none;-moz-user-select:none;-webkit-user-select:none;-ms-user-select:none;}#error{position:absolute;width:100%;height:50px;top:50%;margin-top:-25px;text-align:center;color:#fff;font-size:16px;}#loading-bar{position:absolute;width:200px;height:5px;left:50%;margin-left:-100px;top:50%;margin-top:-5px;border:1px solid #fff;border-radius:5px;overflow:hidden;}.loading-bar-visible{-moz-animation:fade .3s;-webkit-animation:fade .3s;animation:fade .3s;opacity:1;}.loading-bar-hidden{-moz-animation:fade-out .1s!important;-webkit-animation:fade-out .1s!important;animation:fade-out .1s!important;opacity:0;}#loading-fill{background:#fff;height:100%;width:0;}@-moz-keyframes fade{from{opacity:0}to{opacity:1}}@-webkit-keyframes fade{from{opacity:0}to{opacity:1}}@keyframes fade{from{opacity:0}to{opacity:1}}@-moz-keyframes fade-out{from{opacity:1}to{opacity:0}}@-webkit-keyframes fade-out{from{opacity:1}to{opacity:0}}@keyframes fade-out{from{opacity:1}to{opacity:0}}#credits{position:absolute;padding-right:20px;padding-bottom:20px;right:0;bottom:0;color:#fff;font-size:12px;text-align:right;cursor:default;-moz-animation:fade 1s;-webkit-animation:fade 1s;animation:fade 1s;}#credits div{opacity:.5;margin-top:6px;}#credits a:link{color:#fff;}#credits a:visited{color:#fff;}.credits-hidden{opacity:0;}#quality-container{position:absolute;right:20px;top:20px;font-size:12px;height:25px;line-height:25px;-webkit-animation:fade 1s;animation:fade 1s;}#quality-label{float:left;color:#fff;margin-right:15px;cursor:default;}.quality{float:left;text-align:center;width:80px;height:25px;line-height:25px;border-left:1px solid #fff;border-top:1px solid #fff;border-bottom:1px solid #fff;}.quality-selected{background:#fff;color:#000;cursor:default;}.quality-unselected{background:0 0;color:#fff;cursor:pointer;}.quality-unselected:hover{background:rgba(255,255,255,.1);}#quality-medium{border-top-left-radius:8px;border-bottom-left-radius:8px;padding-left:4px;}#quality-high{border-right:1px solid #fff;border-top-right-radius:8px;border-bottom-right-radius:8px;padding-right:4px;}.popup{display:none;position:fixed;top:0;left:0;width:100%;height:100%;z-index:999;backdrop-filter:blur(5px);background-color:rgba(0,0,0,.5);transition:opacity .3s ease;}.popup-content{display:flex;flex-direction:column;justify-content:center;align-items:center;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background-color:rgba(255,255,255,.8);padding:20px;text-align:center;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,.5);transition:transform .3s ease,opacity .3s ease;max-width:90%;max-height:90%;}@keyframes popIn{from{transform:translate(-50%,-150%) scale(.8);opacity:0}to{transform:translate(-50%,-50%) scale(1);opacity:1}}@keyframes fadeIn{from{opacity:0}to{opacity:1}}@keyframes popOut{from{transform:translate(-50%,-50%) scale(1);opacity:1}to{transform:translate(-50%,150%) scale(.8);opacity:0}}@keyframes fadeOut{from{opacity:1}to{opacity:0}}.popup-button{cursor:pointer;background-color:transparent;border:none;font-size:20px;padding:10px 20px;margin:0 10px;border-radius:10px;transition:transform .2s ease-in-out;color:#575af3;}.popup-button:hover{color:#007bff;transform:scale(1.2);}.popup-buttons{display:flex;justify-content:space-around;margin-top:20px;}.popup-content-heading{font-weight:bold;color:#4bb711;border-bottom:2px solid #cf4f04;padding-bottom:5px;margin-bottom:10px;}.popup-scrollable-content{max-height:60vh;overflow-y:auto;padding-right:15px;}.popup-scrollable-content::-webkit-scrollbar{width:2px;}.popup-scrollable-content::-webkit-scrollbar-track{background:#f1f1f1;}.popup-scrollable-content::-webkit-scrollbar-thumb{background:#888;}.popup-scrollable-content::-webkit-scrollbar-thumb:hover{background:#555;}
